modify small changes rename verifyEmail function